<resources>
    <string name="app_name">MGU</string>
    <string name="overflow_home">Home View</string>
    <string name="overflow_term">Term View</string>
    <string name="overflow_course">Course View</string>
    <string name="overflow_assessment">Assessment View</string>
    <string name="home_text">Whats New in MGU News</string>
    <string name="navigation_text">Please use the top-right menu to navigate.</string>
    <string name="academic_hall">An image of an academic hall with graduates about to through their caps</string>
    <string name="courses">Courses</string>
    <string name="selected_course">Selected Course</string>
    <string name = "digitsForText">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="title">Title:</string>
    <string name="startdate">startDate</string>
    <string name="startdatesemi">StartDate:</string>
    <string name="enddate">EndDate:</string>
    <string name="status">Status:</string>
    <string name="mentor">Mentor</string>
    <string name="save">Save</string>
    <string name="mentor_view">Mentor View</string>
    <string name="mentors">Mentors</string>
    <string name="selected_mentor">Selected Mentor</string>
    <string name="menubar_subtitle">Modern Governess University</string>
    <string name="assessments">Assessments</string>
    <string name="channel_name">courseValue</string>
    <string name="channel_description">courseDescription</string>
    <string name="channel_name_course">CourseChannel</string>
    <string name="channel_description_course">Notifies Course Start End Dates</string>
    <string name="channel_name_assessment">AssessmentChannel</string>
    <string name="channel_description_assessment">Notifies Assessment Start End Dates</string>
    <string name="main_bodytext">Changes this text because it was news generated by Chat-GPT. Just to be safe to Simlish from the EA SIMS Game Series.
    Swobe zibbs gwanda gam la roo zaroo fergoob. Webney shooflee zurzoh forbzoo vanu gon nono bloo zow cou yib mibsy oosh yorbs sedna. Army-putar tor sato sperk gedna treeb zow kondo vana vana dowl chee zaroo zu. Acko oofa noobie frash zurzoh nart feebee nib apper sa mekchate. Zibbs kweb mekchate maladai gam.

Swobe zerbo yipsee dow om burb. Bweb wepsa foo dabel plooba zibbs. Oosh ongie zagadoo choon yibsy zaroo aw geebuglon. Hipta krem woohoo yebsey zid vendu fwingle smustle klop maboo avoo shoona foop woohoo. Wepsa tinip feebee shanga aw charba. Hooba kowlenin balami hipta mekchate noom ono oh baba feebee. Mala nork shoona fweeka dowl zaroo seeta nurbler boobasnot dag kabuna bor.

Lay mezino badipsa doops mee-la moocha sons bagoo bloo. Smee laka grouw ah gedna foop mee-la wub dib. Be disgrobel squib va zerpa zow kondo flurze fazoo abanoop. Ah gunikso wub burb yorbs prooshtis fredishay pipty welb.
    </string>
    <string name="faculty_search">Faculty Search</string>
    <string name="by">By:</string>
    <string name="type">Type:</string>
    <string name="search">search</string>
    <string name="faculty_search2">Faculty Search</string>
    <string name="test">test</string>
    <string-array name="course_status_array">
        <item>In-Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
        <item>Plan To Take</item>
    </string-array>
    <string-array name="type_array">
        <item>Performance</item>
        <item>Objective</item>
    </string-array>
    <string-array name="search_by">
        <item>Name</item>
        <item>Availability</item>
    </string-array>
    <string-array name="faculty_type">
        <item>TechSupport</item>
        <item>MentorAide</item>
    </string-array>

</resources>