<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">
    <item
        android:id="@+id/course_overflow"
        android:onClick="gotoCourseView"
        android:title="@string/overflow_course"
        app:showAsAction="never" />
    <item
        android:id="@+id/mentor_overflow"
        android:onClick="gotoMentorView"
        android:title="@string/mentor_view" />
    <item
        android:id="@+id/term_overflow"
        android:title="@string/overflow_term"
        app:showAsAction="never"
        android:onClick="gotoTermView"
        />
    <item
        android:id="@+id/overflow_assessment"
        android:title="@string/overflow_assessment"
        android:onClick="gotoAssessmentView"
        app:showAsAction="never" />

</menu>